# rust-embeded-test-attint402

./: Cargo.toml
avr-specs/: avr-attiny202.json  avr-attiny45.json
src/: main.rs
